manifests/showks-canvas-kaitoii11/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-kaitoii11
  namespace: showks
  labels:
    app: showks-canvas-kaitoii11
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-kaitoii11

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-kaitoii11
  namespace: showks
  labels:
    app: showks-canvas-kaitoii11
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-kaitoii11
  template:
    metadata:
      labels:
        app: showks-canvas-kaitoii11
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-kaitoii11
          image: cloudnativedaysjp/showks-canvas-kaitoii11:prod-fb7a1b1901e93f13b274d7ca36db20ba721c207b
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-kaitoii11
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "showks-canvas-kaitoii11"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - showks-canvas-kaitoii11.showks.cloudnativedays.jp
      secretName: tls-certificate
  rules:
  - host: showks-canvas-kaitoii11.showks.cloudnativedays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-kaitoii11
          servicePort: 8080
